[package]
name = "avian_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "avian", features = ["simd"]}

[dependencies.bevy]
version = "0.14.0-rc"
features = ["dynamic_linking", "jpeg", "file_watcher"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
